<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.kosteklvp.calculator.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/editText"
        android:layout_width="319dp"
        android:layout_height="194dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:ems="10"
        android:gravity="right"
        android:inputType="textMultiLine"
        android:maxLength="30"
        android:textSize="52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="1"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="2"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="B"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="C"
        app:layout_constraintStart_toEndOf="@+id/buttonB"
        app:layout_constraintTop_toTopOf="@+id/buttonB" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="4"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="5"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/button_plus"
        app:layout_constraintTop_toTopOf="@+id/button_plus" />

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="7"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="8"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="x"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="/"
        app:layout_constraintStart_toEndOf="@+id/button_multiply"
        app:layout_constraintTop_toTopOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="="
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <Button
        android:id="@+id/button0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintTop_toTopOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text=","
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button_squareroot"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="√"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toTopOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_square"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="x²"
        app:layout_constraintStart_toEndOf="@+id/button_squareroot"
        app:layout_constraintTop_toTopOf="@+id/button_squareroot" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1" />

    <ScrollView
        android:id="@+id/scroolView"
        android:layout_width="368dp"
        android:layout_height="204dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
